hopeful fix to image on mobile (fable)

--- a/src/pages/portfolio/styles.scss
+++ b/src/pages/portfolio/styles.scss
@@ -57,7 +57,7 @@
             height: 80px;
         }
         .fable {
-            width: 120px;
+            width: 118px;
             height: 80px;
         }
         .cow {
